manifest/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: starlight-subtle-top-level-items
