manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: starlight-subtle-top-level-items
  namespace: starlight-subtle-top-level-items
spec:
  rules:
    - host: starlight-subtle-top-level-items.trueberryless.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: starlight-subtle-top-level-items
                port:
                  number: 80

  tls:
    - hosts:
        - starlight-subtle-top-level-items.trueberryless.org
      secretName: starlight-subtle-top-level-items
